# bevy_openal

./: AGENTS.md  Cargo.toml  README.md  dprint.json  rustfmt.toml
crates/bevy-openal/: Cargo.toml  README.md
crates/bevy-openal-example/: Cargo.toml  README.md  build.rs
crates/bevy-openal-example/src/: app.rs  cli.rs  main.rs  sound.rs
crates/bevy-openal/src/: bevy_assets.rs  bevy_plugin.rs  build_support.rs  decode.rs  lib.rs  openal.rs  runtime.rs
crates/openal-soft-build/: Cargo.toml
crates/openal-soft-build/src/: lib.rs
