[workspace]
resolver = "2"
members = ["crates/bevy-openal", "crates/bevy-openal-example", "crates/openal-soft-build"]

[workspace.package]
version = "0.0.1"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.95"
bevy_app = { version = "0.18", default-features = false, features = ["std"] }
bevy_asset = { version = "0.18", default-features = false }
bevy_ecs = { version = "0.18", default-features = false, features = ["std"] }
bevy_math = { version = "0.18", default-features = false, features = ["std"] }
bevy_reflect = { version = "0.18", default-features = false, features = ["std"] }
bevy_time = { version = "0.18", default-features = false, features = ["std"] }
bevy_transform = { version = "0.18", default-features = false, features = ["std", "bevy-support"] }
glam = "0.30.7"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "rustls-tls"] }
thiserror = "1.0.66"
tracing = "0.1.40"
zip = "2.2.0"
